--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8091
 spring.jpa.database=MYSQL
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/store
+spring.datasource.url=jdbc:mysql://localhost/store
 spring.datasource.username=root
 spring.datasource.password=Dj212499
