--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/store
 spring.datasource.username=root
 spring.datasource.password=Dj212499
+spring.security.user.name=root
+spring.security.user.password=s3cr3t
